--- a/4.2_Analysis gganimate - Walk2.Rmd
+++ b/4.2_Analysis gganimate - Walk2.Rmd
@@ -49,7 +49,7 @@ for(j in 0:(no_of_hundreds-1)){
   }
 
 #Step 4 (but determined with semi-automatic approach)
-start_time <- estimated_start_time
+start_time <- as.POSIXct("2025-01-20 10:50:06.533333")
 
 #Step 5
 #Display parameters
@@ -228,6 +228,6 @@ estimated_start_time <- as.POSIXct(as.numeric(estimated_start_time_raw_new) - se
 
 ```{r}
 raw_df <- Walk1
-temp <- filter(Walk1, time > as.POSIXct("2025-01-20 10:50:07.000"), time <  as.POSIXct("2025-01-20 10:50:30.000"))
+temp <- filter(Walk1, time > as.POSIXct("2025-01-20 10:56:30.500"), time <  as.POSIXct("2025-01-20 10:56:40.500"))
 plot(temp$Z, type = 'l')
 ```
